Downgrade source code from Java 17 to Java 8.
* Replace Java 17 syntax with Java 8.
** Remove use of pattern variables in Object.equals(:Object) methods.
** Remove use of Java 17's @Serial annotation.
* Replace use of Java 17 APIs with Java 8.